# file-server-canister

./: LICENSE  README.md
backcode/: Cargo.toml
backcode/file_server_lib/: Cargo.toml
backcode/file_server_lib/src/: data.rs  files.rs  lib.rs  tools.rs  types.rs  upgrade.rs
backcode/main_canister/: Cargo.toml
backcode/main_canister/src/: lib.rs  tools.rs
backcode/src/: lib.rs  tests.dart  tools.dart  tools.rs  types.dart  types.rs
backcode/user_canister/: Cargo.toml
backcode/user_canister/src/: lib.rs
dart_scripts/: .gitignore  pubspec.yaml
frontcode/: .gitignore  pubspec.yaml
frontcode/lib/: files_and_directories.dart  main.dart  palette.dart  state.dart  upload_folder.dart
frontcode/test/: widget_test.dart
frontcode/web/: index.html  manifest.json
t/: pubspec.yaml
t/lib/: main.dart
t/web/: index.html
