[package]
name = "file_server_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.7.4"
candid = "0.8.4"
serde = "1.0.137"
serde_bytes = "0.11.6"
serde_cbor = "0.11.2"
base64 = "0.13.0"
sha2 = "0.9.1"
ic-certified-map = "0.3.4"
num-traits = "0.2.15"


