[package]
name = "main_canister"
version = "0.1.0"
edition = "2021"
authors = ["Levi Feldman <levifeldman37@gmail.com>"]



[lib]
crate-type = ["cdylib"]




[dependencies]
file_server_lib = { path = "../file_server_lib" }
ic-cdk = "0.7.4"
candid = "0.8.4"
serde = "1.0.137"
serde_bytes = "0.11.6"
sha2 = "0.9.1"
ic-ledger-types = "0.4.2"

